fix: smooth scroling on mobiles

--- a/web-foundations/14.11/responsive.css
+++ b/web-foundations/14.11/responsive.css
@@ -1,6 +1,8 @@
 /* reset */
 body {
   position: relative;
+  overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* avoid horizontal scroll */
